# RAG-Playground

./: .env  README.md  pyproject.toml  requirements.txt  test.txt  typesense.ipynb
agentic-rag/: 1-agenticrag.ipynb
data/vector_store/3b0cf5da-7181-43a5-a598-e19a6c72befa/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
